--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano_</h2>
         <div class="botoes">
-            <button class="botoes">Cursos na Alura</button>
-            <button class="botoes">criar projetos em Javascript</button>
-            <button class="botoes">Criar um portfolio</button>
-            <button class="botoes">Atualizar meu curriculo</button>
+            <button class="botao ativo">Cursos na Alura</button>
+            <button class="botao">criar projetos em Javascript</button>
+            <button class="botao">Criar um portfolio</button>
+            <button class="botao">Atualizar meu curriculo</button>
         </div>
        
     </section>
